Closed Bug 478814 Opened 17 years ago Closed 17 years ago

[FIX]Condition the XUL display types that we don't parse if not MOZ_XUL on MOZ_XUL

Categories

(Core :: Layout, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bzbarsky, Assigned: bzbarsky)

Details

Attachments

(1 file)

Patch coming up.
Attached patch Like soSplinter Review
Attachment #362655 - Flags: superreview?(dbaron)
Attachment #362655 - Flags: review?(dbaron)
Comment on attachment 362655 [details] [diff] [review] Like so r+sr=dbaron. Seems like a good way to make sure we don't ifdef too little; not sure about how we can protect against ifdeffing too much.
Attachment #362655 - Flags: superreview?(dbaron)
Attachment #362655 - Flags: superreview+
Attachment #362655 - Flags: review?(dbaron)
Attachment #362655 - Flags: review+
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
Component: Layout: Misc Code → Layout
Product: Core Graveyard → Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: