Bug 478814.  Don't leave the XUL display types that are unimplemented if not MOZ_XUL defined if not MOZ_XUL.  r+sr=dbaron